# libscrcpypp

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml
cmake/: scrcpy++Config.cmake.in
src/: client.cpp  client.hpp  control_msg.cpp  control_msg.hpp  decoder.cpp  decoder.hpp  frame.cpp  frame.hpp  test.cpp  test_async.cpp  video_test.cpp
test/: control_test.cpp  video_test_async.cpp
